# catalogTool

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  run_web.sh  run_web_network.sh  tsconfig.json  vite.config.ts
LBAR/NEW/: merge-summary.json
archive_candidate/: README.md
catalog_tool/: __init__.py  br_compare.py  env_file.py  settings.py  tables.py
catalog_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
catalog_tool/auth/: __init__.py  ldap.py
catalog_tool/builders/: __init__.py  fields.py  generic_element_entry.py  modify_reason_entry.py
catalog_tool/cli/: generate_modify_reason_entry.py
deploy/: nginx-catalog-tool.conf.example
docs/: ARCHITECTURE.md  USER_GUIDE.md
scripts/: run_web.sh  run_web_network.sh
server/: catalog-tool-ui-mcp.js  catalogone-mcp-client.js  catalogone-prompt.js  chat-history.js  chat-history.test.js  chat-mode.js  chat-mode.test.js  context-usage.js  cursor-chat.js  env-reload.js  errors.js  index.js  mcp-config.js  mcp-env.js  mcp-routes.js  mcp-session.js  preflight-check.js  preflight-check.test.js  providers.js  providers.test.js  tools.js  ui-control.js
tests/: test_br_compare.py  test_catalog_one_client.py  test_chat_config.py  test_compare_workflow.py  test_entity_api.py  test_env_file.py  test_environment_store.py  test_excel_dg.py  test_import_context.py  test_ldap_auth.py  test_mcp_catalog.py  test_mcp_client.py  test_mcp_config.py  test_mcp_session_env.py  test_session_validation.py  test_user_environments.py  test_zip_catalog.py
(+63 files in other folders)
