[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "catalog-tool"
version = "0.1.0"
description = "Generate and push CatalogOne generic element entries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0,<4",
]

[project.scripts]
catalog-tool-web = "catalog_tool.web.app:main"
catalog-tool-generate-modify-reason-entry = "catalog_tool.cli.generate_modify_reason_entry:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["catalog_tool*"]
